# solvent_flashcards

./: README.md  pyproject.toml  setup.cfg
Localapp/: html_viewer.py  localapp.py
Webapp/: app.py  solvent-cards.yaml  webapp.py
Webapp/sources/: __init__.py
Webapp/sources/blueprints/solvent_guide/: routes.py
Webapp/sources/templates/: solvent_guide.html
src/solvent_guide/: add_solvent.py  remove_solvent.py  reset_solvents.py  solvent-cards.yaml  webapp.py
src/solvent_guide/sources/: __init__.py
src/solvent_guide/sources/blueprints/solvent_guide/: CHEM21_calculator.py  __init__.py  default_colours.txt  routes.py
src/solvent_guide/sources/static/css/: hazard_colours.css  pagestyle.css
src/solvent_guide/sources/static/js/: add_solvent.js
src/solvent_guide/sources/templates/: CHEM21.html  _example_flashcard.html  accessibility.html  base.html  new_solvent.html  solvent_guide.html
