[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solvent_guide"
version = "0.4.7"
authors = [
  {name="Joe Heeley", email="joe.heeley@nottingham.ac.uk"},
    { name="Samuel Boobier", email="samuel.boobier@googlemail.com" }
]
description = "Standalone version of the solvent guide as shown in the AI4Green ELN"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=1.4.1",
    "blinker>=1.6.2",
    "flask>=2.3.2",
    "plotly>=5.9.0",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JoeHeeley2/solvent_flashcards"
"Bug Tracker" = "https://github.com/JoeHeeley2/solvent_flashcards/issues"
