[options]
include_package_data = True
python_requires = >= 3.9
install_requires = [
    "numpy>=1.26.0",
    "pandas>=1.4.1",
    "blinker>=1.6.2",
    "flask>=2.3.2",
    "plotly>=5.9.0",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.2"
]

[options.package_data]
* = *.csv, *.js, *.css, *.html, *.txt
